--- a/src/Fakestore API/fakestoreAPI.html
+++ b/src/Fakestore API/fakestoreAPI.html
@@ -11,7 +11,7 @@
     <header>
     </header>
     <main>
-        <h1>Super FakeStore</h1>
+        <h1>Super Fake Store</h1>
         <section id="searchbar">
             <div id="search-wrapper">
                 <input type="text" name="" id="searchInput" placeholder="Search by title">
@@ -22,7 +22,7 @@
                 </select>
             </div>
             <div id="filter-wrapper">
-                <p>Filter by Catgories:  </p>
+                <p>Filter by Categories:  </p>
                 <button id="electronicBtn">electronics</button>
                 <button id="jewelleryBtn">jewellery</button>
                 <button id="mensClothingBtn">men's clothing</button>
@@ -31,9 +31,6 @@
             </div>
         </section>
         <section id="productCards">
-            <!-- <div id="card">
-
-            </div> -->
         </section>
     </main>
     <footer></footer>
